--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@
                 <a href="/">
                   <img src="https://gabrieljones.it/aes/Logo7.png" alt="Logo" class="icon icon-sm me-2" width="40" height="40">
                   <div class="it-brand-text">
-                    <div class="it-brand-title">Autori e Scrittori</div>
-                    <div class="it-brand-tagline d-none d-md-block">Polo culturale</div>
+                    <div class="it-brand-title">Istituto Digitale per i Beni Letterari “F. Petrarca”</div>
+                    <div class="it-brand-tagline d-none d-md-block"></div>
                   </div>
                 </a>
               </div>
 
               <!-- Parte destra con link -->
               <div class="header-right-link">
-                <a href="/info/" class="btn btn-danger">Scoprici</a>
-                <a href="/tag/" class="btn btn-danger">Trasparenza</a>
+                <a href="/" class="btn btn-danger">Home</a>
+                <a href="/navigazione/" class="btn btn-danger">Navigazione</a>
               </div>
 
             </div> <!-- /it-header-center-content-wrapper -->
